Fixed drop down nav being hidden under main content on front page

--- a/sites/all/themes/fj16/sass/_header.scss
+++ b/sites/all/themes/fj16/sass/_header.scss
@@ -118,6 +118,7 @@
 				background: $blue;
 				width: 300px;
 				padding-top: 10px;
+				z-index: 1;
 
 				li { // 2nd level
 					text-transform: none;
